@@ -1,3 +1,11 @@
+2011-07-25
+* fix copyright statements
+* remove more duplicate code from bruteforce.py
+
+2011-07-24
+* finish ranking method from MSR 2011 paper, except reporting
+* remove (some) duplicate code from bruteforce.py
+
 2011-07-17
 * don't barf if we can't generate a proper LIST for the batch extraction
 program
